# Ogym-v1

./: .env.example  .env.frontend.example  .gitignore  .replit  .replit.workflow  DEMO_READINESS.md  MOBILE_NAV.md  MOBILE_READINESS.md  README.md  SECURITY_AUDIT.md  SECURITY_EXCEPTION.md  capacitor.config.ts  package-lock.json  package.json  pyproject.toml  replit.md  yc-application-draft.txt
android/: capacitor.settings.gradle
attached_assets/: Info_1770336547506.plist  Pasted--6-Day-Six-Pack-Abs-Focus-Duration-4-training-days-per-_1769839593966.txt  Pasted--AuthViewModel-swift-OGym-import-Foundation-import-Comb_1770243821469.txt  Pasted--ContentView-swift-OGym-import-SwiftUI-struct-HomeView-_1770238272930.txt  Pasted--HomeTab-swift-OGym-import-SwiftUI-struct-HomeTab-View-_1770252632440.txt  Pasted--HomeTab-swift-OGym-import-SwiftUI-struct-HomeTab-View-_1770254396111.txt  Pasted--HomeTab-swift-OGym-import-SwiftUI-struct-HomeTab-View-_1770254416338.txt  Pasted--HomeTab-swift-OGym-import-SwiftUI-struct-HomeTab-View-_1770259944029.txt  Pasted--HomeTab-swift-OGym-import-SwiftUI-struct-HomeTab-View-_1770262371965.txt  Pasted--HomeTab-swift-OGym-import-SwiftUI-struct-HomeTab-View-_1770264266903.txt  Pasted--LoginView-swift-OGym-import-SwiftUI-struct-LoginView-V_1770239969726.txt  Pasted--MARK-Member-Dashboard-Full-Web-Match-struct-MemberDash_1770259303885.txt  Pasted--MARK-Today-s-Workout-Card-struct-TodayWorkoutCard-View_1770264129421.txt  Pasted--MARK-Today-s-Workout-Expandable-Card-struct-TodayWorko_1770256541822.txt  (+118 more)
backend/: requirements.txt  seed.py
server/: db.ts  (+20 more)
(+257 files in other folders)
